Refaktorert og oppgradert kode